# dqhub

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: pipeline.yml
data/synthetic/: input.csv
reports/: last_metrics.json
reports/history/: metrics_history.csv
rules/: rules.yaml
scripts/: run_dq.py  verify.py
src/dqhub/: __main__.py  cli.py  make_synth.py  pipeline.py  report.py  run_dq.py  verify.py
