[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqhub"
version = "0.1.0"
description = "Rule-driven data quality checks with CLI and reports."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Omer Yalcin" }]
dependencies = [
  "pandas>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "black>=24.0",
]

[project.scripts]
dqhub = "dqhub.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]